<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/input_form_github_name"
        android:ems="10"
        android:id="@+id/input_form_github_name" android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
    <Button
        android:text="@string/input_form_get_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_form_get_user_info" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/input_form_github_name" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <Button
        android:text="@string/input_form_get_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_form_get_repository" app:layout_constraintStart_toEndOf="@+id/input_form_get_user_info" android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/input_form_github_name"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_form_repository_list"
        app:layout_constraintTop_toBottomOf="@+id/input_form_get_user_info"
        android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_form_user_info" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/input_form_get_user_info" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>